--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web</title>
+    <title>RSS Reader</title>
+    <%= stylesheet 'styles' %>
     <%= favicon %>
   </head>
   <body>
+    <%= flash[:error] %>
     <%= flash[:success] %>
     <%= yield %>
   </body>
