--- a/apps/web/assets/stylesheets/styles.css.scss
+++ b/apps/web/assets/stylesheets/styles.css.scss
@@ -1,3 +1,34 @@
 html, body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 100%;
+}
+
+.auth_form_container {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  height: 100%;
+  flex-wrap: wrap;
+
+  > form {
+    > div {
+      display: flex;
+      flex-direction: row;
+      gap: 0.5rem;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+
+      > label {
+        display: inline-block;
+        flex-basis: 30%;
+      }
+
+      > input {
+        display: inline-block;
+        flex: 1;
+      }
+    }
+  }
 }
