--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>RSS Reader</title>
-    <%= stylesheet 'styles' %>
     <%= favicon %>
+    <%= stylesheet 'https://cdn.jsdelivr.net/npm/sanitize.css@13.0.0/sanitize.min.css' %>
+    <%= stylesheet 'https://cdn.jsdelivr.net/npm/sanitize.css@13.0.0/typography.min.css' %>
+    <%= stylesheet 'https://cdn.jsdelivr.net/npm/sanitize.css@13.0.0/forms.min.css' %>
+    <%= stylesheet 'styles' %>
+    <%= javascript 'https://cdn.jsdelivr.net/npm/@hotwired/turbo@7.2.0/dist/turbo.es2017-umd.min.js' %>
   </head>
   <body>
     <%= flash[:error] %>
