--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -1,16 +1,18 @@
-<%
-  unless errored
-%>
+<% if user.blank? %>
+  <%= flash[:error] %>
+<% else %>
 
   <div>
-  <%=
-    if new_account
-      'Create a password for your account'
-    else
-      'Set a new password'
-    end
-  %>
+    <%=
+      if new_account
+        'Create a password for your account'
+      else
+        'Set a new password'
+      end
+    %>
   </div>
+
+  <%= flash[:error] %>
 
   <%=
     form_for :auth, routes.process_reset_password_path do
