So many changes

--- a/apps/web/assets/stylesheets/styles.css.scss
+++ b/apps/web/assets/stylesheets/styles.css.scss
@@ -1,33 +1,214 @@
+@import url('https://fonts.googleapis.com/css2?family=Hubballi&family=Oxanium:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/sanitize.css@13.0.0/sanitize.min.css');
+@import url('https://cdn.jsdelivr.net/npm/sanitize.css@13.0.0/typography.min.css');
+@import url('https://cdn.jsdelivr.net/npm/sanitize.css@13.0.0/forms.min.css');
+@import url('https://cdn.jsdelivr.net/npm/gralig@1.0.0/dist/gralig.min.css');
+
+* {
+  font-family: 'Hubballi', sans-serif !important;
+  // font-family: 'Oxanium', sans-serif !important;
+}
+
 html, body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
 }
 
-.auth_form_container {
-  display: flex;
+.main-container {
+  margin: auto;
+  max-width: 50%;
+  padding-top: 5rem;
+}
+
+.center-container {
   align-content: center;
-  justify-content: center;
-  height: 100%;
   flex-wrap: wrap;
 
-  > form {
-    > div {
-      display: flex;
-      flex-direction: row;
-      gap: 0.5rem;
-      flex-wrap: nowrap;
-      justify-content: center;
-      align-content: center;
-      align-items: center;
+  > .gra-card {
+    width: 25%;
 
-      > label {
-        display: inline-block;
-        flex-basis: 30%;
+    @media screen and (max-width: 1000px) {
+      width: 50%;
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 75%;
+    }
+
+    @media screen and (max-width: 600px) {
+      width: 90%;
+    }
+  }
+}
+
+fieldset {
+  > legend {
+    width: 100%;
+  }
+}
+
+.auth-form-links {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.feather.link-separator {
+  width: 6px;
+  height: 6px;
+  stroke: currentColor;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: currentColor;
+}
+
+.gra-alert {
+  max-width: 100%;
+  min-width: 100%;
+  width: 100%;
+  height: initial;
+  line-height: initial;
+}
+
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+select,
+textarea {
+  font-size: 1.6rem;
+}
+
+.prefixed-input {
+  position: relative;
+
+  &::before {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 1.6rem;
+    width: 1.6rem;
+    height: 1.6rem;
+    margin-top: -7px;
+    padding-left: 1.6rem;
+    background-image: url('');
+    background-repeat: no-repeat;
+    background-size: cover;
+    content: '';
+  }
+
+  > input {
+    padding-left: 4.8rem;
+  }
+
+  &.prefixed-input--email::before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='15' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-mail'%3E%3Cpath d='M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z'%3E%3C/path%3E%3Cpolyline points='22,6 12,13 2,6'%3E%3C/polyline%3E%3C/svg%3E");
+  }
+
+  &.prefixed-input--password::before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='15' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-lock'%3E%3Crect x='3' y='11' width='18' height='11' rx='2' ry='2'%3E%3C/rect%3E%3Cpath d='M7 11V7a5 5 0 0 1 10 0v4'%3E%3C/path%3E%3C/svg%3E");
+  }
+
+  &.prefixed-input--url::before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-rss'%3E%3Cpath d='M4 11a9 9 0 0 1 9 9'%3E%3C/path%3E%3Cpath d='M4 4a16 16 0 0 1 16 16'%3E%3C/path%3E%3Ccircle cx='5' cy='19' r='1'%3E%3C/circle%3E%3C/svg%3E");
+  }
+}
+
+.feather {
+  width: 12px;
+  height: 12px;
+
+  &.icon-left {
+    margin-right: 0.75rem;
+  }
+
+  &.icon-right {
+    margin-left: 0.75rem;
+  }
+}
+
+.gra-form-group:last-child {
+  margin-bottom: 0;
+}
+
+.row {
+  flex-wrap: wrap !important;
+}
+
+.add-feed-form {
+  display: flex;
+  align-items: stretch;
+
+  .gra-form-group {
+    margin-bottom: 0;
+    flex: 1;
+
+    &:first-child {
+      flex-basis: 85%;
+    }
+
+    &:last-child {
+      flex-basis: 15%;
+    }
+
+    input {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-right: 0;
+    }
+
+    .gra-btn {
+      height: 100%;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+  }
+}
+
+#feeds-form {
+  margin-bottom: 2rem;
+}
+
+.feeds-list {
+  .gra-card {
+    height: 100%;
+    margin-bottom: 0;
+
+    .gra-card-content {
+      display: flex;
+      flex-direction: column;
+      max-height: 400px;
+
+      .gra-card-title {
+        .feather {
+          cursor: pointer;
+          display: none;
+          height: 14px;
+          width: 14px;
+          margin-left: 0.5rem;
+        }
+
+        &:hover {
+          .feather {
+            display: initial;
+          }
+        }
       }
 
-      > input {
-        display: inline-block;
-        flex: 1;
+      .gra-card-body {
+        flex-shrink: 1;
+        flex-grow: 0;
+        flex-basis: auto;
+        overflow: auto;
+
+        .gra-list {
+          padding: 0;
+        }
       }
     }
   }
