--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -1,41 +1,110 @@
-<% if user.blank? %>
-  <%= flash[:error] %>
-<% else %>
+<div class='center-container gra-flex gra-flex-jc-c gra-height-100'>
+  <div class='gra-card'>
+    <div class='gra-card-content'>
+      <div class='gra-card-body'>
 
-<%= user.email %>
+        <% if token_invalid %>
+          <span class='gra-block gra-alert red' role='alert'>
+            <%= flash[:error] %>
+          </span>
+        <% elsif requesting_reset_email %>
+          <%=
+            form_for :auth, routes.process_reset_password_path do
+              fieldset do
+                legend do
+                  h5 'Request Password Reset', class: 'gra-heading'
+                end
 
-  <div>
-    <%=
-      if new_account
-        'Create a password for your account'
-      else
-        'Set a new password'
-      end
-    %>
+                if flash[:error].present?
+                  span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
+                    flash[:error]
+                  end
+                end
+
+                if flash[:success].present?
+                  span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
+                    flash[:success]
+                  end
+                end
+
+                div class: 'gra-form-group' do
+                  label 'E-mail', for: :email
+                  span class: 'prefixed-input prefixed-input--email' do
+                    email_field :email
+                  end
+                end
+
+                div class: 'gra-form-group gra-center-text' do
+                  submit class: 'gra-btn gra-width-100' do
+                    span 'Submit Reset Request'
+                    i '', 'data-feather': 'send', class: 'icon-right'
+                  end
+                end
+
+                div class: 'gra-form-group auth-form-links' do
+                  a 'Sign In', href: routes.sign_in_path
+                end
+              end
+            end
+          %>
+        <% elsif providing_new_password %>
+          <%=
+            form_for :auth, routes.process_reset_password_path do
+              fieldset do
+                legend do
+                  title = new_account ? 'Create a password for your account' : 'Set a new password'
+                  h5 title, class: 'gra-heading'
+                end
+
+                if flash[:error].present?
+                  span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
+                    flash[:error]
+                  end
+                end
+
+                if flash[:success].present?
+                  span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
+                    flash[:success]
+                  end
+                end
+
+                div class: 'gra-form-group' do
+                  label 'New Password', for: :password
+                  span class: 'prefixed-input prefixed-input--password' do
+                    password_field :password
+                  end
+                end
+
+                div class: 'gra-form-group' do
+                  label 'Confirm New Password', for: :password_confirmation
+                  span class: 'prefixed-input prefixed-input--password' do
+                    password_field :password_confirmation
+                  end
+                end
+
+                div do
+                  hidden_field :token, value: params.get(:token)
+                end
+
+                div class: 'gra-form-group gra-center-text' do
+                  submit class: 'gra-btn gra-width-100' do
+                    span 'Set Password'
+                    i '', 'data-feather': 'check-square', class: 'icon-right'
+                  end
+                end
+
+                div class: 'gra-form-group auth-form-links' do
+                  a 'Sign In', href: routes.sign_in_path
+                end
+              end
+            end
+          %>
+        <% else %>
+          <span class='gra-block gra-alert red' role='alert'>
+            The was an unknown problem loading the password reset form
+          </span>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <%= flash[:error] %>
-
-  <%=
-    form_for :auth, routes.process_reset_password_path do
-      div do
-        label 'New Password', for: :password
-        password_field :password
-      end
-
-      div do
-        label 'Confirm New Password', for: :password_confirmation
-        password_field :password_confirmation
-      end
-
-      div do
-        hidden_field :token, value: params.get(:token)
-      end
-
-      div do
-        submit 'Set Password'
-      end
-    end
-  %>
-
-<% end %>
+</div>
