--- a/apps/web/templates/auth/sign_in.html.erb
+++ b/apps/web/templates/auth/sign_in.html.erb
@@ -1,20 +1,56 @@
-<div class='auth_form_container'>
-  <%= flash[:error] %>
-  <%=
-    form_for :auth, routes.process_sign_in_path do
-      div do
-        label 'E-mail', for: :email
-        email_field :email
-      end
+<div class='center-container gra-flex gra-flex-jc-c gra-height-100'>
+  <div class='gra-card'>
+    <div class='gra-card-content'>
+      <div class='gra-card-body'>
+        <%=
+          form_for :auth, routes.process_sign_in_path do
+            fieldset do
+              legend do
+                h5 'Sign In', class: 'gra-heading'
+              end
 
-      div do
-        label 'Password', for: :password
-        password_field :password
-      end
+              if flash[:error].present?
+                span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
+                  flash[:error]
+                end
+              end
 
-      div do
-        submit 'Sign In'
-      end
-    end
-  %>
+              if flash[:success].present?
+                span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
+                  flash[:success]
+                end
+              end
+
+              div class: 'gra-form-group' do
+                label 'E-mail', for: :email
+                span class: 'prefixed-input prefixed-input--email' do
+                  email_field :email
+                end
+              end
+
+              div class: 'gra-form-group' do
+                label 'Password', for: :password
+                span class: 'prefixed-input prefixed-input--password' do
+                  password_field :password
+                end
+              end
+
+              div class: 'gra-form-group gra-center-text' do
+                submit class: 'gra-btn gra-width-100' do
+                  span 'Sign In'
+                  i '', 'data-feather': 'log-in', class: 'icon-right'
+                end
+              end
+
+              div class: 'gra-form-group auth-form-links' do
+                a 'Forgot Password?', href: routes.reset_password_path
+                i '', 'data-feather': 'circle', class: 'link-separator'
+                a 'Create Account', href: routes.create_account_path
+              end
+            end
+          end
+        %>
+      </div>
+    </div>
+  </div>
 </div>
