--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -6,9 +6,10 @@
     <link href='https://fonts.googleapis.com' rel='preconnect'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
     <%= stylesheet 'styles' %>
-    <%= javascript 'https://cdn.jsdelivr.net/npm/@hotwired/turbo@7.2.0/dist/turbo.es2017-umd.min.js' %>
     <%= javascript 'https://cdn.jsdelivr.net/npm/feather-icons@4.29.0/dist/feather.min.js' %>
-    <%= javascript 'scripts', defer: true %>
+    <%= javascript 'https://cdn.jsdelivr.net/npm/@hotwired/turbo@7.2.2/dist/turbo.es2017-umd.min.js' %>
+    <%= javascript 'https://cdn.jsdelivr.net/npm/@hotwired/stimulus@3.1.0/dist/stimulus.umd.min.js' %>
+    <%= javascript 'scripts', defer: true, type: 'module' %>
   </head>
   <body>
     <%= yield %>
