Rollup be working now

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript 'https://cdn.jsdelivr.net/npm/feather-icons@4.29.0/dist/feather.min.js' %>
     <%= javascript 'https://cdn.jsdelivr.net/npm/@hotwired/turbo@7.2.2/dist/turbo.es2017-umd.min.js' %>
     <%= javascript 'https://cdn.jsdelivr.net/npm/@hotwired/stimulus@3.1.0/dist/stimulus.umd.min.js' %>
-    <%= javascript 'scripts', defer: true, type: 'module' %>
+    <%= javascript 'scripts', defer: true %>
   </head>
   <body>
     <%= yield %>
