Finally seemed to fix asset management

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>RSS Reader</title>
-    <%= favicon %>
     <link href='https://fonts.googleapis.com' rel='preconnect'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
-    <%= stylesheet 'styles' %>
-    <%= javascript 'scripts', defer: true %>
+    <%= stylesheet 'output' %>
+    <%= javascript 'output' %>
+    <%= favicon %>
   </head>
   <body>
     <%= yield %>
