--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -4,8 +4,8 @@
     <title>RSS Reader</title>
     <link href='https://fonts.googleapis.com' rel='preconnect'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
-    <%= stylesheet 'output' %>
-    <%= javascript 'output' %>
+    <%= stylesheet 'styles' %>
+    <%= javascript 'scripts', defer: true %>
     <%= favicon %>
   </head>
   <body>
