--- a/apps/web/assets/src/stylesheets/tooltip.scss
+++ b/apps/web/assets/src/stylesheets/tooltip.scss
@@ -61,6 +61,8 @@
     margin-top: 8px;
     top: 100%;
     transform: translateX(-50%) translateY(0%);
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   &::before {
