--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -5,7 +5,7 @@
 
         <% if token_invalid %>
           <span class='gra-block gra-alert red' role='alert'>
-            <%= flash[:error] %>
+            <%= flash[:error_alert] %>
           </span>
         <% elsif requesting_reset_email %>
           <%=
@@ -15,15 +15,15 @@
                   h5 'Request Password Reset', class: 'gra-heading'
                 end
 
-                if flash[:error].present?
+                if flash[:error_alert].present?
                   span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
-                    flash[:error]
+                    flash[:error_alert]
                   end
                 end
 
-                if flash[:success].present?
+                if flash[:success_alert].present?
                   span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
-                    flash[:success]
+                    flash[:success_alert]
                   end
                 end
 
@@ -56,15 +56,15 @@
                   h5 title, class: 'gra-heading'
                 end
 
-                if flash[:error].present?
+                if flash[:error_alert].present?
                   span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
-                    flash[:error]
+                    flash[:error_alert]
                   end
                 end
 
-                if flash[:success].present?
+                if flash[:success_alert].present?
                   span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
-                    flash[:success]
+                    flash[:success_alert]
                   end
                 end
 
