--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -2,6 +2,13 @@
 <html>
   <head>
     <title>RSS Reader</title>
+    <%= csrf_meta_tags %>
+    <% if flash[:error_toast].present? %>
+      <meta name='error-flash' content='<%= flash[:error_toast] %>' />
+    <% end %>
+    <% if flash[:success_toast].present? %>
+      <meta name='success-flash' content='<%= flash[:success_toast] %>' />
+    <% end %>
     <link href='https://fonts.googleapis.com' rel='preconnect'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
     <%= stylesheet 'styles' %>
@@ -9,6 +16,9 @@
     <%= favicon %>
   </head>
   <body>
+    <% if authenticated? %>
+      <%= render partial: './navbar' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
