--- a/apps/web/templates/auth/create_account.html.erb
+++ b/apps/web/templates/auth/create_account.html.erb
@@ -9,15 +9,15 @@
                 h5 'Create Account', class: 'gra-heading'
               end
 
-              if flash[:error].present?
+              if flash[:error_alert].present?
                 span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
-                  flash[:error]
+                  flash[:error_alert]
                 end
               end
 
-              if flash[:success].present?
+              if flash[:success_alert].present?
                 span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
-                  flash[:success]
+                  flash[:success_alert]
                 end
               end
 
