--- a/apps/web/templates/feeds/_create_form.html.erb
+++ b/apps/web/templates/feeds/_create_form.html.erb
@@ -1,8 +1,13 @@
 <%=
   form_for :feeds, routes.feed_create_path do
-    if flash[:error].present?
-      span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
-        flash[:error]
+    if flash[:error_alert].present?
+      div class: 'gra-mg-bottom-m gra-alert red', style: 'display: flex; justify-content: center; align-items: center; flex-wrap: nowrap; gap: 1rem;', role: 'alert' do
+        div style: 'flex-grow: 0; flex-shrink: 1;' do
+          i '', 'data-feather': 'x-circle'
+        end
+        div style: 'flex-grow: 1; flex-shrink: 0;' do
+          flash[:error_alert]
+        end
       end
     end
 
