--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -4,9 +4,14 @@
       <div class='gra-card-body'>
 
         <% if token_invalid %>
-          <span class='gra-block gra-alert red' role='alert'>
-            <%= flash[:error_alert] %>
-          </span>
+          <div class='gra-alert red' role='alert'>
+            <div class='alert-icon'>
+              <i data-feather='x-circle'></i>
+            </div>
+            <div class='alert-content'>
+              <%= flash[:error_alert] %>
+            </div>
+          </div>
         <% elsif requesting_reset_email %>
           <%=
             form_for :auth, routes.process_reset_password_path do
@@ -16,14 +21,24 @@
                 end
 
                 if flash[:error_alert].present?
-                  span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
-                    flash[:error_alert]
+                  div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
+                    div class: 'alert-icon' do
+                      i '', 'data-feather': 'x-circle'
+                    end
+                    div class: 'alert-content' do
+                      flash[:error_alert]
+                    end
                   end
                 end
 
                 if flash[:success_alert].present?
-                  span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
-                    flash[:success_alert]
+                  div class: 'gra-mg-bottom-m gra-alert green', role: 'alert' do
+                    div class: 'alert-icon' do
+                      i '', 'data-feather': 'check-circle'
+                    end
+                    div class: 'alert-content' do
+                      flash[:success_alert]
+                    end
                   end
                 end
 
@@ -57,14 +72,24 @@
                 end
 
                 if flash[:error_alert].present?
-                  span class: 'gra-block gra-mg-bottom-m gra-alert red', role: 'alert' do
-                    flash[:error_alert]
+                  div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
+                    div class: 'alert-icon' do
+                      i '', 'data-feather': 'x-circle'
+                    end
+                    div class: 'alert-content' do
+                      flash[:error_alert]
+                    end
                   end
                 end
 
                 if flash[:success_alert].present?
-                  span class: 'gra-block gra-mg-bottom-m gra-alert green', role: 'alert' do
-                    flash[:success_alert]
+                  div class: 'gra-mg-bottom-m gra-alert green', role: 'alert' do
+                    div class: 'alert-icon' do
+                      i '', 'data-feather': 'check-circle'
+                    end
+                    div class: 'alert-content' do
+                      flash[:success_alert]
+                    end
                   end
                 end
 
@@ -100,9 +125,14 @@
             end
           %>
         <% else %>
-          <span class='gra-block gra-alert red' role='alert'>
-            The was an unknown problem loading the password reset form
-          </span>
+          <div class='gra-alert red' role='alert'>
+            <div class='alert-icon'>
+              <i data-feather='x-circle'></i>
+            </div>
+            <div class='alert-content'>
+              The was an unknown problem loading the password reset form
+            </div>
+          </div>
         <% end %>
       </div>
     </div>
