--- a/apps/web/assets/src/stylesheets/navbar.scss
+++ b/apps/web/assets/src/stylesheets/navbar.scss
@@ -3,7 +3,7 @@
   margin-right: 4rem;
   padding-bottom: 2rem;
   padding-top: 2rem;
-  text-align: right;
+  text-align: center;
 
   a, a:hover {
     text-decoration: none !important;
