--- a/apps/web/templates/_navbar.html.erb
+++ b/apps/web/templates/_navbar.html.erb
@@ -1,4 +1,9 @@
 <div class='navbar'>
+  <span tooltip='feeds' tooltip-position='bottom'>
+    <a href='/feeds'>
+      <i data-feather='home'></i>
+    </a>
+  </span>
   <span tooltip='settings' tooltip-position='bottom'>
     <a href='/settings'>
       <i data-feather='settings'></i>
