--- a/apps/web/templates/feeds/_create_form.html.erb
+++ b/apps/web/templates/feeds/_create_form.html.erb
@@ -1,11 +1,11 @@
 <%=
   form_for :feeds, routes.feed_create_path do
     if flash[:error_alert].present?
-      div class: 'gra-mg-bottom-m gra-alert red', style: 'display: flex; justify-content: center; align-items: center; flex-wrap: nowrap; gap: 1rem;', role: 'alert' do
-        div style: 'flex-grow: 0; flex-shrink: 1;' do
+      div class: 'gra-mg-bottom-m gra-alert red', role: 'alert' do
+        div class: 'alert-icon' do
           i '', 'data-feather': 'x-circle'
         end
-        div style: 'flex-grow: 1; flex-shrink: 0;' do
+        div class: 'alert-content' do
           flash[:error_alert]
         end
       end
