--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -20,8 +20,11 @@ html, body {
 
 .main-container {
   margin: auto;
-  max-width: 50%;
-  padding-top: 2rem;
+  padding: 2rem;
+
+  @media (min-width: 768px) {
+    max-width: 50%;
+  }
 }
 
 .center-container {
@@ -92,6 +95,10 @@ fieldset {
   &.prefixed-input--url::before {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-rss'%3E%3Cpath d='M4 11a9 9 0 0 1 9 9'%3E%3C/path%3E%3Cpath d='M4 4a16 16 0 0 1 16 16'%3E%3C/path%3E%3Ccircle cx='5' cy='19' r='1'%3E%3C/circle%3E%3C/svg%3E");
   }
+
+  &.prefixed-input--title::before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-tag'%3E%3Cpath d='M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z'%3E%3C/path%3E%3Cline x1='7' y1='7' x2='7.01' y2='7'%3E%3C/line%3E%3C/svg%3E");
+  }
 }
 
 .row {
@@ -101,6 +108,7 @@ fieldset {
 .add-feed-form {
   display: flex;
   align-items: stretch;
+  flex-wrap: wrap;
 
   .gra-form-group {
     margin-bottom: 0;
@@ -117,13 +125,36 @@ fieldset {
     input {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
-      border-right: 0;
+      border-right-width: 0;
     }
 
     .gra-btn {
       height: 100%;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
+    }
+
+    @media (max-width: 767px) {
+      &:first-child {
+        flex-basis: 100%;
+      }
+
+      &:last-child {
+        flex-basis: 100%;
+      }
+
+      input {
+        border-top-right-radius: 0.2rem;
+        border-right-width: 1px;
+        min-height: 4rem;
+        // border-bottom-right-radius: 0;
+      }
+
+      .gra-btn {
+        border-bottom-left-radius: 0.2rem;
+        min-height: 4rem;
+        // border-top-left-radius: 0;
+      }
     }
   }
 }
