--- a/apps/web/assets/src/stylesheets/navbar.scss
+++ b/apps/web/assets/src/stylesheets/navbar.scss
@@ -1,22 +1,31 @@
 .navbar {
   margin-left: 4rem;
   margin-right: 4rem;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
   padding-top: 2rem;
   text-align: center;
 
-  a, a:hover {
-    text-decoration: none !important;
-  }
+  .gra-nav {
+    justify-content: center;
+    width: 100%;
 
-  > span {
-    &:not(:last-child) {
-      margin-right: 1rem;
-    }
+    .gra-nav-item {
+      padding: 0;
 
-    .feather {
-      height: 20px;
-      width: 20px;
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
+
+      .feather {
+        height: 20px;
+        width: 20px;
+      }
+
+      a {
+        &::after {
+          bottom: 0;
+        }
+      }
     }
   }
 }
